--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,11 @@
             "name": "kyla sample",
             "database": "${workspaceFolder:hands_on_20240920}/data/sqlite.db"
         }
-    ]
+    ],
+    "sqltools.useNodeRuntime": true,
+    "python.testing.pytestArgs": [
+        "tests"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
